# internal/models/mappers/debt.go
@@ -5,20 +5,28 @@ import (
 	dbmodels "github.com/asdf57/bsw/internal/models/db"
 )
 
-func DebtResponseFromDB(debt dbmodels.DebtDBEntry) apimodels.DebtResponse {
+func DebtResponseFromDB(debt dbmodels.DebtDBEntry, usersByID map[uint]dbmodels.UserDBEntry) apimodels.DebtResponse {
+	owedById := debt.UserLowId
+	owedToId := debt.UserHighId
+
+	if debt.NetAmount.IsNegative() {
+		owedById = debt.UserHighId
+		owedToId = debt.UserLowId
+	}
+
 	return apimodels.DebtResponse{
-		ID:           debt.ID,
-		OwedByUserID: debt.OwedByUserId,
-		OwedToUserID: debt.OwedToUserId,
-		Amount:       debt.Amount,
-		Currency:     debt.Currency,
+		ID:         debt.ID,
+		OwedByUser: UserSummaryFromDB(usersByID[owedById]),
+		OwedToUser: UserSummaryFromDB(usersByID[owedToId]),
+		Amount:     debt.NetAmount.Abs(),
+		Currency:   debt.Currency,
 	}
 }
 
-func DebtResponsesFromDB(debts []dbmodels.DebtDBEntry) []apimodels.DebtResponse {
+func DebtResponsesFromDB(debts []dbmodels.DebtDBEntry, usersByID map[uint]dbmodels.UserDBEntry) []apimodels.DebtResponse {
 	responses := make([]apimodels.DebtResponse, 0, len(debts))
 	for _, debt := range debts {
-		responses = append(responses, DebtResponseFromDB(debt))
+		responses = append(responses, DebtResponseFromDB(debt, usersByID))
 	}
 
 	return responses
